--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,24 +15,27 @@ jobs:
         python-version: [3.11]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller pyserial bflb_mcu_tool
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller pyserial bflb_mcu_tool
 
-    - name: Build executable with PyInstaller
-      run: |
-        pyinstaller --onefile --windowed main.py
+      - name: Build executable with PyInstaller
+        run: |
+          pyinstaller --onefile --windowed main.py
 
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: M0SS-101-${{ matrix.os }}
-        path: dist/
+      - name: List dist folder contents
+        run: ls -l dist/
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: M0SS-101-${{ matrix.os }}
+          path: dist/
